--- a/mvc/pom.xml
+++ b/mvc/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.fenwell.jwell</groupId>
-	<artifactId>mvc</artifactId>
+	<artifactId>jwell-mvc</artifactId>
 	<version>0.0.1</version>
 	<packaging>jar</packaging>
 
