--- a/jwell-club/jclub/src/main/webapp/WEB-INF/web.xml
+++ b/jwell-club/jclub/src/main/webapp/WEB-INF/web.xml
@@ -3,5 +3,20 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+	<display-name>jclub</display-name>
+	
+	<filter>
+		<filter-name>jwell</filter-name>
+		<filter-class>com.fenwell.jwell.FilterDispatcher</filter-class>
+		<init-param>
+			<param-name>config</param-name>
+			<param-value>spring.xml</param-value>
+		</init-param>
+	</filter>
+
+	<filter-mapping>
+		<filter-name>jwell</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	
 </web-app>
